--- a/Desafio/src/app/home/home.component.html
+++ b/Desafio/src/app/home/home.component.html
@@ -24,4 +24,9 @@
         </div>
 
     </div>
+    
+    <div class="navegacao">
+        <button id="proxima_pag"><a routerLink="/usuarios">Próxima Página</a></button>
+    </div>
+
 </main>
