--- a/Desafio/src/app/filmes/filmes.component.scss
+++ b/Desafio/src/app/filmes/filmes.component.scss
@@ -6,6 +6,7 @@ main{
 
 p{
     width: 150px;
+    margin: 0;
 }
 
 .titulo_e_img{
@@ -22,11 +23,11 @@ p{
 .infs{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 input{
-    width: 300px;
+    width:40%;
     height: 40px;
 }
 
@@ -35,7 +36,7 @@ select{
     height: 46px;
 }
 
-#salvar{
+.salvar{
     width: 180px;
     height: 46px;
     background-color: #f6511d;
@@ -43,7 +44,7 @@ select{
     border: #f6511d;
 }
 
-#salvar:hover{
+.salvar:hover{
     cursor: pointer;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     background-color: white;
@@ -51,46 +52,16 @@ select{
     border: black solid 1px;
 }
 
+.ajuste_filmes{
+    display: flex;
+    flex-direction: column;
+}
+
 .filmes{
     display: flex;
     justify-content: space-between;
-    margin-top: 50px;
-}
-
-.titulos{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
     align-items: center;
-}
-
-.genero{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
-    align-items: center;
-}
-
-.botoes_editar{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 350px;
-    height: 150px;
-    align-items: flex-end;
-}
-
-.botoes_excluir{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
-    align-items: center;
+    margin-bottom: 20px;
 }
 
 .editar{
@@ -127,4 +98,53 @@ select{
     background-color: white;
     color: black;
     border: black solid 1px;
+}
+
+.navegacao{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+#proxima_pag{
+    width: 200px;
+    height: 35px;
+    background-color: #41b8d2;
+    color: black;
+    border-radius: 10px;
+    border: #41b8d2;
+    transition-duration: 0.5s;
+}
+
+
+#proxima_pag:hover{
+    cursor: pointer;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: white;
+    color: black;
+    border: black solid 1px;
+}
+
+#pag_anterior{
+    width: 200px;
+    height: 35px;
+    background-color: #f6511d;
+    color: white;
+    border-radius: 10px;
+    border: #f6511d;
+    transition-duration: 0.5s;
+}
+
+#pag_anterior:hover{
+    cursor: pointer;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: white;
+    color: black;
+    border: black solid 1px;
+    
+} 
+
+a{
+    text-decoration: none;
+    color: black;
 }
