--- a/Desafio/src/app/footer/footer.component.scss
+++ b/Desafio/src/app/footer/footer.component.scss
@@ -1,11 +1,11 @@
 footer{
-    max-width: 1440px;
+    width: 100%;
     height: 200px;
     background-color: #f6511d;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .logo{
