--- a/Desafio/src/app/home/home.component.scss
+++ b/Desafio/src/app/home/home.component.scss
@@ -41,3 +41,32 @@ p{
     width: 100px;
     height: 100px;
 }
+
+.navegacao{
+    display: flex;
+    justify-content: end;
+}
+
+#proxima_pag{
+    margin-top: 80px;
+    width: 200px;
+    height: 35px;
+    background-color: #41b8d2;
+    color: black;
+    border-radius: 10px;
+    border: #41b8d2;
+    transition-duration: 0.5s;
+}
+
+#proxima_pag:hover{
+    cursor: pointer;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: white;
+    color: black;
+    border: black solid 1px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
