--- a/Desafio/src/app/usuarios/usuarios.component.scss
+++ b/Desafio/src/app/usuarios/usuarios.component.scss
@@ -1,4 +1,5 @@
 main{
+    max-width:100%;
     margin-left: 150px;
     margin-right: 150px;
 }
@@ -20,15 +21,16 @@ label{
 }
 
 input{
-    width: 320px;
-    height: 40px;
+    width: 100%;
+    height: 80%;
 }
 
 p{
     width: 150px;
+    margin: 0;
 }
 
-#cadastrar{
+.cadastrar{
     width: 180px;
     height: 40px;
     background-color: #f6511d;
@@ -38,7 +40,7 @@ p{
     margin-bottom: 30px;
 }
 
-#cadastrar:hover{
+.cadastrar:hover{
     cursor: pointer;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     background-color: white;
@@ -46,54 +48,20 @@ p{
     border: black solid 1px;
 }
 
+
 .informacoes{
+    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     font-family: 'Roboto';
+}
+
+.cadastros{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-}
-
-.nomes{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
-    align-items: center;
-}
-
-.emails{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
-}
-
-.telefones{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
-}
-
-.botoes_editar{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
-    align-items: flex-end;
-}
-
-.botoes_excluir{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 150px;
-    height: 150px;
-    align-items: flex-end;
+    margin-bottom: 20px;
 }
 
 .editar{
@@ -131,4 +99,56 @@ p{
     color: black;
     border: black solid 1px;
 }
+
+.navegacao{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+#proxima_pag{
+    width: 200px;
+    height: 35px;
+    background-color: #41b8d2;
+    color: black;
+    border-radius: 10px;
+    border: #41b8d2;
+    transition-duration: 0.5s;
+}
+
+
+#proxima_pag:hover{
+    cursor: pointer;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: white;
+    color: black;
+    border: black solid 1px;
+}
+
+#pag_anterior{
+    width: 200px;
+    height: 35px;
+    background-color: #f6511d;
+    color: white;
+    border-radius: 10px;
+    border: #f6511d;
+    transition-duration: 0.5s;
+}
+
+#pag_anterior:hover{
+    cursor: pointer;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: white;
+    color: black;
+    border: black solid 1px;
+    
+} 
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+
+
 
